--- a/src/app/components/clientes/form-client/form.component.html
+++ b/src/app/components/clientes/form-client/form.component.html
@@ -53,6 +53,50 @@
       </div>
 
       <div class="form-group row">
+        <label for="" class="col-form-label col-sm-2 mt-2">Email</label>
+        <div class="col-sm-6">
+          <input type="text" class="form-control" [(ngModel)]="cliente.email" name="email" #email="ngModel" >
+          <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
+            <div *ngIf="email.errors.required">
+              Email es requerido
+            </div>
+            <div *ngIf="email.errors.email">
+              Email debe tener un formato valido
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="" class="col-form-label col-sm-2 mt-2">Email</label>
+        <div class="col-sm-6">
+          <input type="text" class="form-control" [(ngModel)]="cliente.email" name="email" #email="ngModel" >
+          <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
+            <div *ngIf="email.errors.required">
+              Email es requerido
+            </div>
+            <div *ngIf="email.errors.email">
+              Email debe tener un formato valido
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="" class="col-form-label col-sm-2 mt-2">Email</label>
+        <div class="col-sm-6">
+          <input type="text" class="form-control" [(ngModel)]="cliente.email" name="email" #email="ngModel" >
+          <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
+            <div *ngIf="email.errors.required">
+              Email es requerido
+            </div>
+            <div *ngIf="email.errors.email">
+              Email debe tener un formato valido
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group row">
         <label for="createAt" class="col-form-label col-sm-2 mt-2">Fecha</label>
         <div class="col-sm-6">
           <input type="date" class="form-control" [(ngModel)]="cliente.createAt" name="createAt">
